<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_add">Add</string>
    <string name="title_edit">Edit</string>
    <string name="title_filter">Filter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agent_selection">Select an agent</string>
    <string name="agent_name_placeholder">John D.</string>
    <string name="estate_saving_error_text_placeholder">Error saving the estate</string>
    <string name="estate_type_placeholder">Estate Type</string>
    <string name="point_of_interest_placeholder">Point of interest</string>
    <string name="add_photos">Add photos</string>
    <string name="estate_saving_error_dialog_title">Error saving the estate</string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string name="features">Features</string>
    <plurals name="roomsCount">
        <item quantity="one">%d room</item>
        <item quantity="other">%d rooms</item>
    </plurals>
    <string name="areaInSquareMeter">%d m²</string>
    <string name="addedOn"><b>Added on:\u0020</b></string>
    <string name="available">Available</string>
    <string name="sold">Sold</string>
    <string name="soldOn"><b>Sold on:\u0020</b></string>
    <string name="estate_type_label">Estate type</string>
    <string name="areaLabel">Area</string>
    <string name="number_of_rooms_label">Number of rooms</string>
    <string name="number_of_bathrooms_label">Number of bathrooms</string>
    <string name="number_of_bedrooms_label">Number of bedrooms</string>

    <string name="estate_type">Estate type:\u0020 <b>%s</b></string>
    <string name="areaWithValue">Area:\u0020 <b>%d m²</b></string>
    <string name="number_of_rooms">Number of rooms:\u0020 <b>%s</b></string>
    <string name="number_of_bathrooms">Number of bathrooms:\u0020 <b>%s</b></string>
    <string name="number_of_bedrooms">Number of bedrooms:\u0020 <b>%s</b></string>

    <string name="points_of_interest">Points of interest</string>
    <string name="address">Address</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="delete_photo">Delete photo</string>
    <string name="estate_photo">Estate photo</string>
    <string name="save">Save</string>
    <string name="dot">.</string>
    <string name="price">Price</string>
    <string name="no_estate_type_error">Please specify the estate type</string>
    <string name="photo_error">Add at least one photo. Each photo should have a description.</string>
    <string name="add_image">Add image</string>
    <string name="estate_status">Estate status</string>
    <string name="sale_date">Sale date</string>
    <string name="update_description">Update description</string>
    <string name="new_agent">New agent</string>
    <string name="agent_photo">Agent photo</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="currency">Currency</string>
    <string name="add_estate">Add estate</string>
    <string name="location_autocomplete_hint">Enter a city name</string>
    <string name="empty_string" />
    <string name="list_view_label">List (%d)</string>
    <string name="map_view_label">Map (%d)</string>
    <string name="estate_saved_message">The estate has been saved</string>
    <string name="filter_label">Filter</string>
    <string name="entry_date">Entry date</string>
    <string name="map_loading_default_error">Can\'t load map. Check your network</string>
    <string name="select_from_library">Select from library</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="point_of_interest_icon">Point of interest icon</string>
    <string name="apply_filters">Apply filters</string>
    <string name="clear_filters">Clear filters</string>
    <string name="location">Location</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="minimum_number_of_photos">Minimum number of photos</string>
    <string name="estate_type_icon">Estate type icon</string>
    <string name="no_estate_found">No estate found. Try to change the filter</string>
    <string name="loan_simulator_label">Loan simulator</string>
    <string name="loan_price_information_text">This is the amount of the property you wish to purchase including agency fees. If you have not yet found a property, you can indicate the maximum amount you wish to allocate to your purchase.</string>
    <string name="profile_label">The profile</string>
    <string name="loan_label">The loan</string>
    <string name="tenure">Tenure</string>
    <string name="interest_rate">Interest rate</string>
    <string name="notary_fees_rate">Notary fees rate</string>
    <string name="warranty_costs_rate">Warranty costs rate</string>
    <string name="net_monthly_income">Net monthly income</string>
    <string name="other_loan_payment">Other loan payment</string>
    <string name="initial_payment">Initial payment</string>
    <string name="rate">%s \u0020%%</string>
    <string name="amount">%s \u0020$</string>
    <string name="loan_summary">Loan summary</string>
    <string name="debt_rate">Debt rate</string>
    <string name="monthly_loan_payment">Monthly loan payment</string>
    <string name="total_notary_fees">Total notary fees</string>
    <string name="monthly_warranty_payment">Monthly warranty payment</string>
    <string name="total_warranty_costs">Total warranty costs</string>
    <string name="total_interest">Total interest</string>
    <string name="loan_simulator_icon">Loan simulator icon</string>

</resources>