<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.estatesFilter.EstateFilterFragment">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/spacing_small"
        android:background="@drawable/circular_background"
        android:contentDescription="@string/back"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/spacing_small"
        android:src="@drawable/ic_close"
        app:tint="@color/red" />
    <LinearLayout
        android:id="@+id/actionsButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:elevation="@dimen/elevation"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonApplyFilters"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:backgroundTint="@color/green"
            android:text="@string/apply_filters"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonClearFilter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/clear_filters"
            android:textAllCaps="false"
            android:textColor="@color/green"
            app:strokeColor="@color/green"
            app:strokeWidth="2dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/actionsButtonLayout"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/estate_type_label" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/estateTypeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/location" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_autocomplete_hint"
                app:hintTextColor="@color/quantum_grey">

                <AutoCompleteTextView
                    android:id="@+id/citiesAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="3"
                    android:padding="@dimen/spacing_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/selectedCitiesChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/citiesAutoCompleteTextView">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/areaLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/minAreaTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:hint="@string/minimum"
                    app:errorEnabled="true"
                    app:suffixText="m²">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minAreaTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:text="200" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maxAreaTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/maximum"
                    app:errorEnabled="true"
                    app:suffixText="m²">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxAreaTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:text="2000" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/price" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/minPriceTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:layout_weight="1"
                    android:hint="@string/minimum"
                    app:errorEnabled="true"
                    app:suffixText="$">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minPriceTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:text="20000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maxPriceTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/maximum"
                    app:errorEnabled="true"
                    app:suffixText="$">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxPriceTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:text="20000000" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/number_of_rooms_label" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/roomChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/number_of_bedrooms_label" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/bedroomChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/minimum_number_of_photos" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/minPhotosCountChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/points_of_interest" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/poiChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/estate_status" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/statusChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/entry_date" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/entryDateChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:text="@string/sale_date" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/saleDateChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
