<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/cinnabar"
            android:elevation="@dimen/elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
            app:title="Real Estate Manager"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/spacing_small"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/loanSimulatorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_extra_small"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/loan_simulator_icon"
                    android:padding="@dimen/spacing_small"
                    android:src="@drawable/ic_mortage" />

                <ImageButton
                    android:id="@+id/currencyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/currency"
                    android:padding="@dimen/spacing_small"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:src="@drawable/ic_currency"
                    app:tint="@color/white" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/listViewControlsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:background="@android:color/transparent">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedButton="@+id/listViewButton"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/listViewButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="List (0)"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color_selector"
                    app:strokeColor="@color/button_stroke_selector" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mapViewButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Map (0)"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color_selector"
                    app:strokeColor="@color/button_stroke_selector" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/filterLabelLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <ImageButton
                    android:id="@+id/filterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/filter_label"
                    android:padding="@dimen/spacing_small"
                    android:src="@drawable/ic_filter"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/filterLabelTextView"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/filter_label"
                    android:textColor="@color/black" />

            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_home"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newEstateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:contentDescription="@string/add_estate"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/cinnabar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>